fixed the alignment issues 😢

--- a/index.css
+++ b/index.css
@@ -1,11 +1,14 @@
 * {
-    text-align: center;
+
+    text-align: center !important;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 ul {
-    margin: 20px;
+    
     border: 5px solid rgb(113, 255, 231);
+    margin: 20px auto ;
+    max-width: 800px;
     padding: 40px;
     font-size: large;
     font-weight: bold;
@@ -18,9 +21,17 @@ h1 {
     border-right: 40px solid rgb(208, 255, 80) !important;
     border: 5px solid rgb(208, 255, 80);
 }
-p {
-    text-align: center;
+#content {
+    display: block;
+    max-width: 800px;
+    border: 5px solid darkred;
+    background-color:  crimson ;
+    margin: 20px auto;
+    max-width: 800px;
+    padding: 40px;
+    color:aliceblue;
     
+
 
 }
 img {
